made responsive as well as hamburger for small screens

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css">
   </head>
   <body>
     <div id="main">
@@ -35,26 +36,26 @@
         <div id="content1">
           <a
             href="https://www.google.com/maps/place/Amroz+compo-info+Institute+:+Computer+Course+%7C+Data+Entry+Course+%7C+Digital+Marketing+Course+in+Rohini,+Begumpur,+Rama+Vihar/@28.726499,77.060264,12z/data=!4m6!3m5!1s0x390d06f45b1847a1:0xbd3b8c2076d49959!8m2!3d28.7264994!4d77.060264!16s%2Fg%2F1pp2vfjgc?hl=en-US&entry=ttu"
-            ><i class="ri-map-pin-2-fill"></i>Rohini-22</a
+            ><i class="ri-map-pin-2-fill"></i>(Rohini-22)</a
           >
           <a
-            href="https://www.youtube.com/@AMROZINSTITUTE"
-            target="_blank"
-            rel="noopener"
-            ><i class="ri-youtube-fill"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/amrozinstitute_08/"
-            target="_blank"
-            rel="noopener"
-            ><i class="ri-instagram-fill"></i
-          ></a>
-          <a
+          href="https://www.instagram.com/amrozinstitute_08/"
+          target="_blank"
+          rel="noopener"
+          ><i class="ri-instagram-fill"></i
+            ></a>
+            <a
             href="https://www.facebook.com/AMROZINSTITUTE/"
             target="_blank"
             rel="noopener"
             ><i class="ri-facebook-circle-fill"></i
-          ></a>
+              ></a>
+              <a
+                href="https://www.youtube.com/@AMROZINSTITUTE"
+                target="_blank"
+                rel="noopener"
+                ><i class="ri-youtube-fill"></i
+              ></a>
         </div>
         <div id="content2">
           <a href="tel: +91 9211344965"
@@ -76,6 +77,20 @@
         <a href="#Home">Result</a>
         <a href="#Home">Contact Us</a>
       </div>
+    </div>
+    <div class="hamburger">
+      <img src="./public/Images/2301397.png" alt="">
+    </div>
+    <div class="nav-responsive">
+      <h1 id="back-drop">X</h1>
+      <img src="./public/Images/Amroz_Logo.png" alt="Amroz Logo">
+      <a href="#Home">Home</a>
+      <a href="#Home">About Us</a>
+      <!-- ADD a Drop DropDown on Courses -->
+      <a href="#Home">Courses</a>
+      <a href="#Home">Gallery</a>
+      <a href="#Home">Result</a>
+      <a href="#Home">Contact Us</a>
     </div>
     <!-- JavaScript SRC -->
     <script src="script.js"></script>
